Add HTML, CSS, start working on functions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
 </head>
 
 <body>
-
+    <div class="main-content">
+        <h1>Library</h1>
+        <div class="add-book">
+            <div class="add-book-form">
+                <div>
+                    <p>Book title</p>
+                    <input type=text>
+                </div>
+                <div>
+                    <p>Book author</p>
+                    <input type=text>
+                </div>
+                <div>
+                    <p>Book pages</p>
+                    <input type=number>
+                </div>
+                <div>
+                    <p>Read</p>
+                    <input type=checkbox>
+                </div>
+            </div>
+            <div>
+                <button>Submit</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
