Add 'submit book to library'-function

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <div class="add-book-form">
                 <div>
                     <p>Book title</p>
-                    <input type=text>
+                    <input type=text id="book-title">
                 </div>
                 <div>
                     <p>Book author</p>
-                    <input type=text>
+                    <input type=text id="book-author">
                 </div>
                 <div>
                     <p>Book pages</p>
-                    <input type=number>
+                    <input type=number id="book-pages">
                 </div>
                 <div>
                     <p>Read</p>
-                    <input type=checkbox>
+                    <input type=checkbox id="book-read">
                 </div>
             </div>
             <div>
