--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div>
-                <button>Submit</button>
+                <button id="submit-button">Submit</button>
             </div>
         </div>
     </div>
