Trying some function

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <button id="submit-button">Submit</button>
             </div>
         </div>
+        <div class="book-list"></div>
     </div>
     <script src="script.js"></script>
 </body>
