--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 <body>
     <div class="main-content">
         <h1>Library</h1>
-        <div class="add-book">
-            <div class="add-book-form">
-                <div>
-                    <p>Book title</p>
-                    <input type=text id="book-title">
-                </div>
-                <div>
-                    <p>Book author</p>
-                    <input type=text id="book-author">
-                </div>
-                <div>
-                    <p>Book pages</p>
-                    <input type=number id="book-pages">
-                </div>
-                <div>
-                    <p>Read</p>
-                    <input type=checkbox id="book-read">
-                </div>
+        <div>
+            <button id="add-book-button">Add book</button>
+        </div>
+        <div class="add-book-form">
+            <div>
+                <p>Book title</p>
+                <input type=text id="book-title">
+            </div>
+            <div>
+                <p>Book author</p>
+                <input type=text id="book-author">
+            </div>
+            <div>
+                <p>Book pages</p>
+                <input type=number id="book-pages">
+            </div>
+            <div>
+                <p>Read</p>
+                <input type=checkbox id="book-read">
             </div>
             <div>
                 <button id="submit-button">Submit</button>
