Add delete-book and toogle-read-status functionality

--- a/index.html
+++ b/index.html
@@ -15,28 +15,31 @@
         <div>
             <button id="add-book-button">Add book</button>
         </div>
-        <div class="add-book-form">
-            <div>
-                <p>Book title</p>
-                <input type=text id="book-title">
-            </div>
-            <div>
-                <p>Book author</p>
-                <input type=text id="book-author">
-            </div>
-            <div>
-                <p>Book pages</p>
-                <input type=number id="book-pages">
-            </div>
-            <div>
-                <p>Read</p>
-                <input type=checkbox id="book-read">
-            </div>
-            <div>
-                <button id="submit-button">Submit</button>
-            </div>
-        </div>
         <div class="book-list"></div>
+    </div>
+    <div class="add-book-form">
+        <div>
+            <p>Book title</p>
+            <input type=text id="book-title">
+        </div>
+        <div>
+            <p>Book author</p>
+            <input type=text id="book-author">
+        </div>
+        <div>
+            <p>Book pages</p>
+            <input type=number id="book-pages">
+        </div>
+        <div>
+            <p>Read</p>
+            <input type=checkbox id="book-read">
+        </div>
+        <div>
+            <button id="submit-button">Submit</button>
+        </div>
+        <div>
+            <button id="cancel-submit-button">Cancel</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
