Some cringe CSS changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <body>
     <div class="main-content">
-        <h1>Library</h1>
-        <div>
+        <div class="header">
+            <h1>Library</h1>
+        </div>
+        <div class="add-book-div">
             <button id="add-book-button">Add book</button>
         </div>
         <div class="book-list"></div>
